<resources>
    <string name="facebook_app_id">1628483567374240</string>
    <string name="app_name">UID Madapp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Accueil</string>
    <string name="title_activity_login">Authentification</string>
    <string name="title_activity_register">Inscription</string>
    <string name="title_activity_success">Alerte émise</string>
    <string name="title_activity_maps">Emplacement de l\'hopital</string>
    <string name="title_activity_attach">Rattacher un tag</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--text value resources-->
    <string name="text_appdescription">UID est une application qui permet d\'aider les patients qui ont besoin d\'être suivie médicalement. En cas de malaise, UID alerte immédiatement les urgences et permettent aux personnes d\'aider les victimes jusqu\'à l\'arrivé des secours.</string>
    <string name="text_inscription_detail">Ces informations nous aideront a mieux vous aider en cas de malaise, en aucun cas elles ne seront divulguer.</string>
    <!--hint resource-->
    <string name="hint_emailadress">Votre adresse email (*)</string>
    <string name="hint_password">Mot de passe (*)</string>
    <string name="hint_password_confirm">Confirmer votre mot de passe (*)</string>
    <string name="hint_name">Votre nom (*)</string>
    <string name="hint_firstname">Votre prénom (*)</string>
    <string name="hint_sexe">Votre sexe (*)</string>
    <string name="hint_sexe_male">Homme</string>
    <string name="hint_sexe_female">Femme</string>
    <string name="hint_datenaissance">Votre date de naissance (*)</string>
    <string name="hint_adresse">Votre adresse (*)</string>
    <string name="hint_contact">Numero mobile</string>
    <string name="hint_probleme">Mes problèmes (*)</string>
    <string name="hint_maladie">Maladies...</string>
    <string name="hint_contact_urgence">Contact d\'urgence</string>
    <string name="label_hopital_signaler">L\'hopital signalé : </string>
    <string name="hint_continue">Continuer vers l\'application</string>
    <string name="hint_register">Enregistrer</string>
    <string name="hint_inscription">Inscription</string>


    <!--button text resource-->
    <string name="button_login">Se connecter</string>
    <string name="button_link_register">Inscription</string>
    <string name="button_register">Enregistrer</string>
    <string name="button_continue">Continuer</string>
    <string name="button_show_hospital">Voir hopital</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emergency_title_bar">Urgence</string>
    <string name="account_title_bar">Mon compte</string>
    <string name="title_activity_splash">UID Madapp</string>
    <string name="text_forgot">Mot de passe oublié</string>
    <string name="text_use_fbaccount">Ou utiliser votre compte Facebook.</string>

    <!--message et erreur -->
    <string name="error_empty_name">Le nom ne doit pas être vide.</string>
    <string name="error_empty_firstname">Le prénom ne doit pas être vide.</string>
    <string name="error_empty_datenaissance">La date de naissance ne doit pas être vide.</string>
    <string name="error_empty_adresse">L\'adresse ne doit pas être vide.</string>
    <string name="error_empty_maladie">Le champ maladie ne doit pas être vide.</string>
    <string name="error_empty_mail">L\'adresse email ne doit pas être vide.</string>
    <string name="error_empty_password">Le mot de passe ne doit pas être vide.</string>
    <string name="error_tag_alreadyused">Ce tag est déjà enregistrer</string>
    <string name="error_tag_ok">Le tag a été correctement enregistrer</string>

    <string name="msg_quit_window">Voulez-vous vraiment quitter la fenêtre en cours?</string>
    <string name="msg_retry">REESSAYER</string>
    <string name="msg_undo">ANNULER</string>
    <string name="msg_ok">OK</string>
    <string name="msg_loading">Chargement...</string>
    <string name="msg_wrong_infologin">Certaines informations sont éronées.</string>
    <string name="msg_check_network">Vérification de la connexion internet...</string>
    <string name="msg_verify_network">Veuillez verifier votre connexion internet.</string>
    <string name="msg_verify_password">Mot de passe incohérent</string>
    <string name="msg_maladies_notexist">n\'existe pas</string>
    <string name="msg_wrong_fblogin">Erreur durant la tentative de connexion sur votre compte Facebook.</string>
    <string name="msg_touch_tag">Scanner le tag NFC</string>
    <string name="msg_nfc_disable">NFC est désactivé.</string>
    <string name="msg_device_notsupportnfc">Ce périphérique ne supporte pas NFC</string>
    <string name="msg_activate_location_title">Localisation désactivé</string>
    <string name="msg_activate_location">Veuillez activer la fonction de localisation</string>
    <string name="msg_advertissement">Avertissement</string>
    <string name="action_cancel">Annuler</string>
    <string name="msg_hopital_signaler">Garder votre calme et appliquer les premiers soins</string>
    <string name="msg_lorem_ipsum">Lorem ipsum dolor sit amet, vide tacimates duo te. Eos cu dicit putant invidunt, cu sit dolor graeco, ad pri choro nemore indoctum. Ut pro debet noster consetetur, eum ut nostro numquam qualisque, ne sed dicat deterruisset. Id affert suavitate imperdiet his. Vel vocent detracto efficiendi ne, nam te debet laudem principes, diam expetendis voluptatibus ne sea. Usu oportere neglegentur at. Sea amet iuvaret ei, eum no timeam admodum.</string>
</resources>
