<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uidmadapp.urgenceidentification.fragment.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/modify_edittext_nom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName"
                    android:theme="@style/AppTheme.uidEditText" />

                <EditText
                    android:id="@+id/modify_edittext_prenom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/hint_firstname"
                    android:inputType="textPersonName"
                    android:theme="@style/AppTheme.uidEditText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:text="@string/hint_sexe"
                    android:textSize="14sp"
                    android:textStyle="bold" />
                <RadioGroup
                    android:id="@+id/modify_radio_register_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_marginRight="10sp"
                        android:id="@+id/modify_radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_sexe_male"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/modify_radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_sexe_female" />
                </RadioGroup>

                <EditText
                    android:id="@+id/modify_edittext_datenaissance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/hint_datenaissance"
                    android:inputType="date"
                    android:theme="@style/AppTheme.uidEditText" />

                <EditText
                    android:id="@+id/modify_edittext_adresse"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/hint_adresse"
                    android:inputType="text"
                    android:theme="@style/AppTheme.uidEditText" />

                <EditText
                    android:id="@+id/modify_edittext_contact"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/hint_contact"
                    android:inputType="text"
                    android:theme="@style/AppTheme.uidEditText" />

                <EditText
                    android:id="@+id/modify_edittext_email_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_edittext"
                    android:enabled="false"
                    android:hint="@string/hint_emailadress"
                    android:inputType="textEmailAddress"
                    android:theme="@style/AppTheme.uidEditText" />

                <EditText
                    android:id="@+id/modify_edittext_password_register1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:theme="@style/AppTheme.uidEditText" />

                <EditText
                    android:id="@+id/modify_edittext_password_register2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/hint_password_confirm"
                    android:inputType="textPassword"
                    android:theme="@style/AppTheme.uidEditText" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50sp"
                    android:layout_marginBottom="25sp"
                    android:background="@drawable/line_gradient" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/hint_probleme"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:id="@+id/modify_probleme_exemple"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <MultiAutoCompleteTextView
                    android:id="@+id/modify_multiAutocompleteMaladie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/hint_maladie" />

                <Button
                    android:id="@+id/modify_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_theme"
                    android:text="@string/hint_register"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/modify_attach_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_theme"
                    android:layout_marginTop="10sp"
                    android:text="@string/title_activity_attach"
                    android:textColor="#ffffff"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
