<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="com.uidmadapp.urgenceidentification.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_appdescription"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edittext_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/hint_emailadress"
                    android:inputType="textEmailAddress"
                    android:theme="@style/AppTheme.uidEditText" />

                <EditText
                    android:theme="@style/AppTheme.uidEditText"
                    android:id="@+id/edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_edittext"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/signin_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/button_login"
                        android:background="@drawable/btn_theme"
                        android:layout_marginRight="5dp"
                        android:textStyle="bold"
                        android:textColor="#ffffff" />

                    <Button
                        android:id="@+id/register_link_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:text="Inscription"
                        android:textStyle="bold"
                        android:background="@drawable/btn_theme"
                        android:textColor="#ffffff"/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/text_use_fbaccount"
                android:textStyle="bold"
                android:textAlignment="center" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb_login_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerInParent="true" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
