<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="com.uidmadapp.urgenceidentification.SuccessScanTagActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/header_conseil"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/label_hopital_signaler"
                android:textColor="@android:color/holo_red_light"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/value_hopital_signaler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:gravity="left"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_show_hospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_theme"
            android:textColor="#ffffff"
            android:text="@string/button_show_hospital"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/msg_hopital_signaler"
            android:textSize="16sp"
            android:textStyle="bold" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/line_gradient" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_below="@+id/header_conseil"
        android:id="@+id/liste_maladie"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />

</RelativeLayout>
